# paraphase

./: README copy.md  README.md  example_usage.py  paraphrase_example.py  pyproject.toml  requirements.txt
paraphase/: __init__.py  config.py  evaluator.py
paraphase/models/: __init__.py  bart_models.py  base_model.py  t5_model.py
paraphase/utils/: __init__.py  cleaner.py  preprocessor.py
paraphasemax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
